--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
+    "joi": "^13.2.0",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
