--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "cross-env": "^5.1.4",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "joi": "^13.2.0",
+    "mocha": "^5.1.1",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
@@ -42,9 +45,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.1.1",
     "nodemon": "^1.17.3",
     "nyc": "^11.7.1",
     "supertest": "^3.0.0"
