--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ env:
   global:
     - CC_TEST_REPORTER_ID=f75215e9756d1393fe984c2c8a16bd1f14aeb5460e0ac153bdc69a0e228a9d28
 
-script:
-  - npm run test
 
 cache: 
   
@@ -16,15 +14,13 @@ cache:
     - 'node_modules'
 
 
-
 before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
-
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-  
+ - npm install
+script:
+ - npm run test
+ - npm run check-coverage
 after_success:
-  - npm run coverage
+ - npm run coverage
+ - npm run report-coverage
+ - npm run coveralls
   
