--- a/.nycrc
+++ b/.nycrc
@@ -20,5 +20,5 @@
   "sourceMap": false,
   "instrument": false,
   "cache": true,
-  "report-dir": "./server/coverage"
+  "report-dir": "./coverage"
 }
