--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Book-A-Meal is an application that allows customers to make food orders and helps the food vendor know what the customers want to eat.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/dist/app.js",
+    "start": "node ./server/src/app.js",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./server/src/app.js",
     "build": "cross-env NODE_ENV=development babel ./server/src -d ./server/dist",
     "pretest": "",
