--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=production nodemon --exec babel-node ./server/dist/app.js",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./server/src/app.js",
     "build": "cross-env NODE_ENV=development babel ./server/src -d ./server/dist",
+    "heroku-postbuild": "cross-env NODE_ENV=development babel ./server/src -d ./server/dist",
     "pretest": "",
     "lint": "eslint **/*.js --fix",
     "coverage": "cat ./coverage/lcov.info | coveralls",
