--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/emmygozi/Book-A-Meal#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "bcrypt": "^2.0.1",
@@ -32,21 +33,18 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.4",
-    "babel-cli": "^6.26.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
-    "express-validator": "^5.1.2",
-    "joi": "^13.2.0",
-    "mock-req": "^0.2.0",
-    "mock-res": "^0.5.0",
+    "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
-    "sinon": "^4.5.0",
-    "supertest": "^3.0.0",
-    "uuid": "^3.2.1"
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.37.6",
+    "validator": "^10.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
