--- a/server/config/config.json
+++ b/server/config/config.json
@@ -4,20 +4,20 @@
     "password": "moatXF@ctor1",
     "database": "bookameal",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "moatXF@ctor1",
     "database": "bookameal",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
